--- a/react-landing-page/index.html
+++ b/react-landing-page/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security Checking Toolkit for LLMs</title>
-    <link rel="stylesheet" href="/index.css">
+    <meta name="description" content="A Python toolkit providing security checks for domains, URLs, IPs, and more. Integrate easily into any Python application, use via terminal CLI, or run as an MCP server for LLMs.">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
 </body>
 </html>
