--- a/react-landing-page/index.html
+++ b/react-landing-page/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security Checking Toolkit for LLMs</title>
     <meta name="description" content="A Python toolkit providing security checks for domains, URLs, IPs, and more. Integrate easily into any Python application, use via terminal CLI, or run as an MCP server for LLMs.">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.svg" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#2563EB" />
 </head>
 <body>
     <div id="root"></div>
